tests/derivation/core/norec t-p.->.. w_ext 004-neg/expected
1/2: Building RunDerivedGen (RunDerivedGen.idr)
2/2: Building DerivedGen (DerivedGen.idr)
Error: While processing right hand side of checkedGen. Error during reflection: Target type's argument must be a variable name

DerivedGen:1
 5 | %default total
 6 | 
 7 | %language ElabReflection
 8 | 
 9 | checkedGen : Fuel -> (Fuel -> Gen MaybeEmpty a) => (Fuel -> Gen MaybeEmpty b) => Gen MaybeEmpty (a, b, a)
                                                                                                         ^^

